tests/contract_testcases/substrate/libraries/restrictions_01.sol

        library c {
            receive() internal {}
        }
// ---- Expect: diagnostics ----
// error: 3:13-31: receive not allowed in a library
